--- a/task.html
+++ b/task.html
@@ -148,7 +148,7 @@
                 </div>
             </div>
               <!-- ider yea jo line  hea jis mea yea meara youtube link hea agar apko task edit karnahea to is linke koremove karkea naya link past kare har task kea aher mea asa link hoga apnea jis be task ko chang karna hea wo ap karsktea hea-->
-            <button class="task-button" onclick="completeTask(100, 'https://youtube.com/@html-hero?si=5-fOU4FeAD5mSvK-')">claim</button>
+            <button class="task-button" onclick="completeTask(100, 'https://www.instagram.com/egod.coin?igsh=aTZ6NWo3b2J1MzZ6&utm_source=qr')">claim</button>
         </div>
     <!--yaha tak copy karna hea  or subsea ahr mea mea apko jaga dekata hu waha add kardena  -->
         <div class="task-container">
@@ -165,7 +165,7 @@
                         </div>
                     </div>
                 </div>
-                <button class="task-button" onclick="completeTask(100, 'https://youtu.be/JqVhry6_O8A?si=cmsyr9Ty1R5VPk9U')">claim</button>
+                <button class="task-button" onclick="completeTask(100, https://www.instagram.com/egod.coin?igsh=aTZ6NWo3b2J1MzZ6&utm_source=qr)">claim</button>
             </div>
             <div class="task-container">
                 <div class="task">
@@ -181,7 +181,7 @@
                             </div>
                         </div>
                     </div>
-                    <button class="task-button" onclick="completeTask(100, 'https://youtu.be/yDLwl-48N3A?si=8loBzpjvnnI4K8HW')">claim</button>
+                    <button class="task-button" onclick="completeTask(100, 'https://www.instagram.com/egod.coin?igsh=aTZ6NWo3b2J1MzZ6&utm_source=qrhttps://youtu.be/yDLwl-48N3A?si=8loBzpjvnnI4K8HW')">claim</button>
                 </div>
                 <div class="task-container">
                     <div class="task">
@@ -197,7 +197,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button class="task-button" onclick="completeTask(100, 'https://youtu.be/aScX2QccdD0?si=hnB-DpVremlzsAXY')">claim</button>
+                        <button class="task-button" onclick="completeTask(100, 'https://www.instagram.com/egod.coin?igsh=aTZ6NWo3b2J1MzZ6&utm_source=qrhttps://youtu.be/aScX2QccdD0?si=hnB-DpVremlzsAXY')">claim</button>
                     </div>
                     <div class="task-container">
                         <div class="task">
@@ -213,7 +213,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <button class="task-button" onclick="completeTask(100, 'https://youtu.be/ntIxCfgl9KE?si=Aaf5BsuYt1nN0B1u')">claim</button>
+                            <button class="task-button" onclick="completeTask(100, 'hthttps://www.instagram.com/egod.coin?igsh=aTZ6NWo3b2J1MzZ6&utm_source=qrtps://youtu.be/ntIxCfgl9KE?si=Aaf5BsuYt1nN0B1u')">claim</button>
                         </div>
 
 <!--------------------------------------------->
