--- a/invite-friends.html
+++ b/invite-friends.html
@@ -13,8 +13,8 @@
 
     <div class="frens-invite">
         <div class="frens-invite-button">
-              <!-- eder ap invite friends task ko edit kar sktea hea apnea bote ka username leko ider  https://example.com is ke gaga par-->
-            <input type="text" value="https://example.com" id="link" readonly>
+              <!-- eder ap invite friends task ko edit kar sktea hea apnea bote ka username leko ider  'https://t.me/EgodBetsBot' is ke gaga par-->
+            <input type="text" value= "https://t.me/EgodBetsBot" id="link" readonly>
             <button id="copyButton">Copy Link</button>
         </div>
     </div>
